# LOUPE-AutoWorkflow

./: .gitignore  TODOall copy.json  TODOall.json
blueprints/: 01_system_blueprint.md  02_workflow_dag.yaml  03_data_contracts.md  04_scoring_policy.md  05_knowledge_base_design.md  06_deployment_ops.md  07_migration_plan.md  08_agent_playbook.md  09_openapi_draft.yaml  10_multi_agent_provider_design.md  11_provider_matrix.yaml  12_optimization_backlog.md  README.md  blueprint_manifest.yaml  workflow_dag_flowchart.md
blueprints/schemas/: artifact_report.schema.json  dashboard_payload.schema.json  ddi_report.schema.json  kb_update_record.schema.json  paper_value_report.schema.json
project/: .env.example  .gitignore  Dockerfile  MANUAL_CN_EN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  service.py
project/deploy/: autoworkflow.service
project/scripts/: install_systemd_service.sh  manage_service.sh  start_server.ps1  start_server.sh
project/ui/static/: admin.js  theme.css  user.js
project/ui/templates/: admin.html  user.html
