[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoworkflow"
version = "0.1.0"
description = "LangGraph-based artifact auditing workflow service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.32.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.34",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "jinja2>=3.1.4",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langgraph>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "pypdf>=5.0.0",
  "httpx>=0.27.0",
]
